# analyzer-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  action.py  action.yml  chromadb_search.py  cli.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: test.yml
src/: agent.py  analyze.py  cli.py  eval.py  github.py  output_schemas.py  print_issues.py  prompts.py  schemas.py  tools.py  vectorised_issue_search.py
src/test/: test_agent.py  test_analyze.py  test_completion_api.py  test_tools.py
src/test/testdata/: please-issues.json  plesae-2.json  volary-v1-v2.json  volary-v1.json
src/volary_analyzer/: agent.py  analysis_history.py  analyze.py  cli.py  completion_api.py  eval.py  github_helper.py  output_schemas.py  print_issues.py  prompts.py  search.py  tools.py  vectorised_issue_search.py
src/volary_analyzer/test/: print_issues_test.py  test_agent.py  test_analyze.py  test_completion_api.py  test_output_schemas.py  test_print_issues.py  test_tools.py
src/volary_analyzer/test/testdata/: AGENTS.md  CLAUDE.md  README.md  minimal-evaluated.json  please-issues-evaluated.json  please-issues.json  plesae-2.json  volary-v1-v2.json  volary-v1-v3.json  volary-v1-v4.json  volary-v1.json
