[project]
name = "volary-analyzer"
version = "0.1.0"
description = "Analyses your repository for technical debt issues"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "docstring-parser==0.17.0",
    "rich==14.2.0",
    "pathspec==0.12.1",
    "pydantic==2.12.5",
    "py-markdown-table==1.3.0",
    "chromadb>=0.5.23",
    "platformdirs>=4.3.6",
    "PyGithub>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]
[project.scripts]
volary-analyzer = "volary_analyzer.cli:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["test"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
